# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//third_party/protobuf/proto_library.gni")

proto_library("v1beta1") {
  sources = [
    "common.proto",
    "document.proto",
    "query.proto",
    "write.proto",
  ]
  deps = [
    "//third_party/googleapis/google/api:annotations_and_http",
    "//third_party/googleapis/google/rpc:status",
    "//third_party/googleapis/google/type:latlng",
    "//third_party/protobuf:protobuf_full",
  ]
  proto_in_dir = "//third_party/googleapis"
  import_dirs = [
    "//third_party/googleapis",
    "//third_party/protobuf/src",
  ]
  generate_python = false
  cc_generator_options = "lite"
  extra_configs = [ "//third_party/googleapis:googleapis_config" ]
}

proto_library("service") {
  sources = [ "firestore.proto" ]
  proto_in_dir = "//third_party/googleapis"
  import_dirs = [ "//third_party/googleapis" ]
  generate_python = false
  generator_plugin_label = "//third_party/grpc:grpc_cpp_plugin"
  generator_plugin_suffix = ".grpc.pb"
  cc_generator_options = "lite"
  import_protobuf_full = true

  deps = [
    ":v1beta1",
    "//third_party/grpc:grpc++",
  ]

  extra_configs = [ "//third_party/googleapis:googleapis_config" ]
}
