# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//third_party/protobuf/proto_library.gni")

proto_library("annotations_and_http") {
  sources = [
    "annotations.proto",
    "http.proto",
  ]
  proto_in_dir = "//third_party/googleapis"
  import_dirs = [ "//third_party/googleapis" ]
  generate_python = false
  cc_generator_options = "lite"
  import_protobuf_full = true
  extra_configs = [ "//third_party/googleapis:googleapis_config" ]
}
